Fix portfolio page on mobile devices

--- a/home/static/css/portfolio.css
+++ b/home/static/css/portfolio.css
@@ -7,6 +7,7 @@
 
 .card img {
     margin: 0px 0px 10px 0px;
+    max-width: 100%;
 }
 
 .card h3 {
@@ -52,4 +53,15 @@
 .intro {
     width: 80%;
     margin: auto;
+}
+
+
+@media (max-width: 576px) {
+    .content {
+        width: 95%;
+    }
+
+    .card {
+        width: 300px;
+    }
 }
